--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,14 @@ body {
 #container {
   width: -webkit-fill-available;
   padding: 1em;
+  display: flex;
+  justify-content: space-between;
 }
 #container > canvas {
-  max-width: -webkit-fill-available;
+  max-width: 50%;
+}
+#container > #list {
+  width: 50%;
 }
 #panel {
   display: flex;
