--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,6 @@ body {
 #container > canvas {
   max-width: 50%;
 }
-#container > #list {
-  width: 50%;
-}
 #panel {
   display: flex;
 }
@@ -64,8 +61,6 @@ body {
 }
 
 #list {
-
-}
-#list > tr:hover {
-  background-color: red;
+  color: white;
+  width: 45%;
 }
